membuat tiap backgroundnya beda warna

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,7 @@ sectoin{
     min-height: 600px;
 }
 /* membuat konten atau sectionya tidak terlalu dempet atau nambah */
+
+.portfolio {
+    background-color: #666;
+}
