--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,12 @@ sectoin{
 .portfolio {
     background-color: #666;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #333;
+
+}
