--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+html{
+    position: relative;
+}
+
+body {
+    margin-bottom: 100px;
+}
+
 .jumbotron img {
     width: 200px;
     border: 5px solid #666;
@@ -17,6 +25,7 @@ sectoin{
 .portfolio {
     background-color: #666;
 }
+
 
 footer {
     position: absolute;
