--- a/css/style.css
+++ b/css/style.css
@@ -36,5 +36,16 @@ footer {
     width: 100%;
     height: 100px;
     background-color: #333;
-
+    padding-top: 30px;
 }
+
+footer p {
+    color: #aaa;
+    font-size: 1em;
+}
+/* footer p karena di index html dia p */
+
+footer p i {
+    color: salmon;
+}
+/* i yang ada di dalam p yang ada didalam footer */
