--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     margin-bottom: 120px;
 }
 
+.jumbotron {
+    background-image: url('../img/jumbotron.jpg');
+}
+
 .jumbotron img {
     width: 200px;
     border: 5px solid #666;
