--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
 .jumbotron img {
     width: 200px;
     border: 5px solid #eaeaea;
+    box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
 }
 
 .jumbotron h1, .jumbotron p {
