--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     background-size: cover;
     background-position: 0 -100px;
     color: #eaeaea;
+    overflow: hidden;
 }
 
 .jumbotron img {
